--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -48,7 +48,7 @@
              </div>
              <div class="badge bg-light text-dark p-2 text-start">
                  <div class="mb-2">
-                     <span th:if="${question.author != null}" th:text="${question.author.username}"></span>
+                     <span th:if="${answer.author != null}" th:text="${answer.author.username}"></span>
                  </div>
                  <div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
              </div>
